# doors-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  structure.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1294602acdc9_first_table.py  572183a9b6b4_first_table.py  a54ce09d58e6_first_table.py  adc102f2a80f_first_table.py  eddb5e91a8c3_first_table.py  fb3f9f33c194_first_table.py
app/: main.py
app/api/v1/: router.py  schemas_transformer.py
app/api/v1/analytics/: router.py
app/api/v1/brands/: router.py
app/cashe/: redis_cashe.py
app/core/: config.py  database.py  scheduler.py
app/crud/: banner.py  catalogs.py  categories.py  import_log.py  import_service.py  manufacturers.py  posts.py  product.py  product_ranking.py  promotion.py  tip.py  video.py
app/ml/: classifier.py  train.py
app/models/: __init__.py  analytics.py  attributes.py  banner.py  brand.py  catalog.py  catalog_image.py  categories.py  category.py  color.py  import_log.py  manufacturer.py  material.py  posts.py  product.py  product_image.py  product_ranking.py  product_video.py  promotion.py  review.py  tip.py  user.py  video.py
app/schemas/: banner.py  brand.py  catalog.py  catalog_image.py  category.py  color.py  home.py  import_log.py  manufacturer.py  material.py  posts.py  product.py  product_image.py  product_video.py  promotion.py  review.py  search.py  tip.py  video.py
app/services/: products.py
app/tasks/: product_tasks.py  worker.py
app/utils/: converters.py  helpers.py  image_utils.py
nginx/: nginx.conf
(+11 files in other folders)
