[tool.poetry]
name = "doors-shop-backend"
version = "0.1.0"
description = "Backend API для интернет-магазина дверей"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
celery = "^5.3.4"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
python-dateutil = "^2.8.2"
tenacity = "^8.2.3"
email-validator = "^2.0.0"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "celery.*", "pandas.*", "redis.*", "jose.*", "passlib.*"]
ignore_missing_imports = true